# unityvr

./: .gitignore  README.md  parseUnityLog.ipynb  pyproject.toml
unityvr/analysis/: align2img.py  alignVRImg.py  fitting.py  fittingFunctions.py  headDirection.py  posAnalysis.py  shapeAnalysis.py  utilityFunctions.py  utils.py
unityvr/preproc/: logproc.py  trajproc.py
unityvr/scripts/: combineUnityVRandImaging.ipynb  debuggingUnityvrRig.ipynb  parseUnityLog.ipynb  preprocessUnityLog.py  processMatlabNiDAQ.ipynb  sampleAnalysis.ipynb  unityDataPreprocessing.ipynb  unityFictracDebugging.ipynb  unityGradientAnalysis.ipynb  unityVRdataclass.ipynb
unityvr/viz/: utils.py  viz.py
