[tool.poetry]
name = "unityvr"
version = "0.1.0"
description = "Tools for analyzing data from Unity-based virtual reality."
authors = ["hjmh <hjmhaberkern@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
scipy = "^1.9.2"
xarray = "^0.17.0"
numpy-ext = "^0.9.5"
seaborn = "^0.11.2"
scikit-image = "^0.19.2"
statsmodels = "^0.13.2"
astropy = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
